 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [tool.setuptools.packages.find]
 include = ["inventory_transfer_env*"]
 exclude = ["server*"]

 [project]
name = "inventory-transfer-env"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "openai>=1.0.0",
    "openenv-core",
    "ortools>=9.8",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
]

[project.scripts]
server = "inventory_transfer_env.server.app:main"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
exclude = [".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
